--- a/vignettes/gtfs2emis_advanced.Rmd
+++ b/vignettes/gtfs2emis_advanced.Rmd
@@ -21,11 +21,9 @@ knitr::opts_chunk$set(
 
 ## Detailed Usage
 
-The detailed usage of `gtfs2emis` has intermediate functions to generate the transport and emissions model. In this case, the user can provide data of fleet distributed according to routes.
+The detailed usage of `gtfs2emis` has intermediate functions to generate the transport and emissions model. In this case, the user can provide data of fleet distributed by routes. The example below shows a situation where the vehicle characteristics is known for several `shape_id` 's.
 
 **1. Read data**
-
-Users can provide a vehicle specific data for each `shape_id`. The example below shows a situation where the vehicle characteristics is known for several `shape_id` 's.
 
 ```{r, eval = TRUE, message = FALSE, echo = FALSE}
 devtools::load_all()
@@ -60,7 +58,7 @@ gps_for <- gtfs2gps::gtfs2gps(gtfs_for)
 data.table::setDT(gps_for)
 ```
 
-We can also define different ranges of minimum and maximum allowed speeds, as well as average speed. In this case, we consider the average speed of 34 km/h.
+Sometimes the GTFS data might have quality issues, particularly regarding the speed and timestamp. For instance, urban buses running over 100 km/h, lower than 2 km/h, or with 'NA' values throughout the whole trip. This produces unrealistic values of 'speed 'and 'timestamp'. In such cases, we adjust the data by setting a valid range of speeds (minimum and maximum valid speeds), and value to replace the missing and unrealistic values. In this case, we consider the valid speed to be between 5 and 75 km/h, and the new speed to be 34 km/h.
 
 ```{r, eval = TRUE}
 gps_for_fix <- adjust_speed(gps_data = gps_for
@@ -70,33 +68,43 @@ gps_for_fix <- adjust_speed(gps_data = gps_for
                             ,clone = TRUE)
 ```
 
-To convert the output to linestring:
+Right now we have the GPS data of the trip adjusted with realistic values of speed and timestamp. User can check how the speed changes along the trip. In this example, as the dataset had all speeds within the accepted limits, the `adjust_speed()` replaced only 'NA' values, which resulted in a small change of average speed. Note that few emission factors are speed-dependent (see next section), so having valid speeds is important for having proper emission factors.
 
-```{r, eval = TRUE}
-linestring_for <- gps_as_sflinestring(gps_for_fix)
+```{r}
+summary(gps_for$speed)
+summary(gps_for_fix$speed)
 ```
 
-Checking some basic statistics of the transport model:
+This plot shows how speed of trip `D814-T01V01B01-I` behaves along the route. The situation of `speed == 0` indicates the presence of a vehicle stop.
 
-```{r, eval = TRUE, fig.width=4,fig.height=6}
-data.table::setDT(linestring_for)
-# speeds
-linestring_for[,min(dist),by=shape_id]
-linestring_for[,mean(dist),by=shape_id]
-linestring_for[,max(dist),by=shape_id]
-# plot
-plot(sf::st_as_sf(linestring_for)["shape_id"],lwd=3)
+```{r,fig.width=7,fig.height=4}
+ggplot(gps_for_fix[trip_id == "D814-T01V01B01-I",])+
+  geom_point(aes(x = cumdist,y = speed))+
+  geom_line(aes(x = cumdist,y = speed))+
+  theme_bw()
+```
+
+In the next step, we convert the data from GPS like format to an 'sf linestring', in order to estimate emissions according to segments of constant speeds.
+
+```{r, eval = TRUE, fig.width=5,fig.height=5}
+linestring_for <- gps_as_sflinestring(gps_for_fix)
+
+ggplot(data=linestring_for) +
+  geom_sf(aes(color= as.numeric(speed))) +
+  scale_color_continuous(type = "viridis")+
+  labs(color = "Speed (km/h)")+
+  theme_void()
 ```
 
 **2. Fleet**
 
-Users can provide a vehicle specific data for each `shape_id`. The example below shows a situation where the vehicle characteristics is known for three `shape_id`s (`T2-1`,`A141-1`, `176-1`) but is unknown for `R10-2`:
+Users can assign a fleet data individually for each `shape_id`. The example below shows a situation where the fleet is assigned to each `shape_id`.
 
 ```{r}
 my_shp <- unique(gps_for$shape_id)
 fleet_data_ef_europe <- data.frame("veh_type" = c(rep(c("Ubus Midi <=15 t"
-                                                      ,"Ubus Std 15 - 18 t"
-                                                      ,"Ubus Artic >18 t"),12),
+                                                        ,"Ubus Std 15 - 18 t"
+                                                        ,"Ubus Artic >18 t"),12),
                                                   rep("Ubus Artic >18 t",2))
                                    ,"euro" = c(rep(c("III","IV","V"),12),
                                                rep("V",2))
@@ -107,10 +115,16 @@ fleet_data_ef_europe <- data.frame("veh_type" = c(rep(c("Ubus Midi <=15 t"
                                                             ,c(1,1))
                                    ,"shape_id" = c(rep(my_shp[1:12],each = 3)
                                                    ,my_shp[13:14]))
-fleet_data_ef_europe
+head(fleet_data_ef_europe)
 ```
 
-The sum of fleet composition per `shape_id` can also be checked:
+In our case study, few `shape_id`'s have more than one vehicle assigned, which means that the probability of being assigned to a certain route is lower than 1. As a rule of thumb, we consider this probability as the frequency of vehicles assigned to that route. For instance, the first `shape_id` has three vehicles with different assignment probabilities (`fleet_composition`).
+
+```{r}
+fleet_data_ef_europe[fleet_data_ef_europe$shape_id == my_shp[1],]
+```
+
+The sum of fleet composition per `shape_id` should equal to `1` . We can check this for our example:
 
 ```{r, eval = TRUE}
 setDT(fleet_data_ef_europe)[,sum(fleet_composition),by = shape_id]
@@ -118,7 +132,7 @@ setDT(fleet_data_ef_europe)[,sum(fleet_composition),by = shape_id]
 
 **3. Visualizing the Emission factors**
 
-We use the european database of emission factors (EF). We can plot the EF to check how it behaves according to `speed` and `veh_type`:
+In this vignette, we use the European database of emission factors (EF). It is possible to check how it behaves according to `speed` , `pollutant`, `fuel` and `veh_type`:
 
 ```{r, message = FALSE, eval = TRUE}
 ef_europe <- ef_europe_emep(speed = units::set_units(10:100,"km/h")
@@ -132,20 +146,20 @@ ef_europe <- ef_europe_emep(speed = units::set_units(10:100,"km/h")
                             ,as_list = TRUE)
 ```
 
-We can use the `emi_to_dt()` to process EF:
+We can use the `emis_to_dt()` to easily process the EF from a list (`ef_europe`) into a `data.frame`:
 
 ```{r, eval = TRUE}
 ef_europe$speed <- units::set_units(10:100,"km/h")
 ef_europe_dt <- emis_to_dt(emi_list = ef_europe
-                          ,emi_vars = "EF"
-                          ,veh_vars = c("veh_type", "fuel", "euro", "tech")
-                          ,pol_vars = "pollutant"
-                          ,segment_vars = "speed")
+                           ,emi_vars = "EF"
+                           ,veh_vars = c("veh_type", "fuel", "euro", "tech")
+                           ,pol_vars = "pollutant"
+                           ,segment_vars = "speed")
 ```
 
-Let us now use a fleet name defined as as veh_type / euro_type
+Considering the fleet name (`name_fleet`) defined as the vehicle category and euro standard (`veh_type` / `euro_type`).
 
-```{r, fig.width=7,fig.height=3, eval = TRUE}
+```{r, fig.width=9,fig.height=3, eval = TRUE}
 setDT(ef_europe_dt)
 ef_europe_dt[,name_fleet := paste0(veh_type, " / Euro ", euro)]
 
@@ -158,15 +172,11 @@ ggplot(ef_europe_dt) +
 
 **4. Emissions estimates**
 
-As the emissions varies with `shape_id` and `fleet`, we compute emissions separately, in a loop.
-
-```{r, eval = TRUE}
- unique(linestring_for$shape_id)
-```
+As the emissions varies with `shape_id` and `fleet`, we need to compute emissions separately, in a loop.
 
 ```{r, message = FALSE}
 emi_data <- lapply(unique(gps_for$shape_id),function(i){
-  tmp_ef_euro <- ef_europe_emep(speed = linestring_for[shape_id == i]$speed,
+  tmp_ef_euro <- ef_europe_emep(speed = setDT(linestring_for)[shape_id == i]$speed,
                                 ,veh_type = fleet_data_ef_europe[shape_id == i]$veh_type
                                 ,euro =  fleet_data_ef_europe[shape_id == i]$euro
                                 ,pollutant = c("CO2","NOx")
@@ -178,13 +188,119 @@ emi_data <- lapply(unique(gps_for$shape_id),function(i){
                    ,ef = tmp_ef_euro
                    ,aggregate = FALSE
                    ,as_list = TRUE)
+  tmp_emis$tp_model <- linestring_for[shape_id == i]
+  tmp_emis$time_column <- tmp_emis$tp_model$timestamp  
   return(tmp_emis)
 })
 ```
 
+The emissions are now aggregated in a list, with several characteristics. These information is important for post-process analysis.
+
+```{r}
+length(emi_data)
+
+names(emi_data[[1]])
+```
+
+**4. Emissions post-processing**
+
+As the results are stored in a long list, `gtfs2emis` package has a couple of convenient functions that help users post-process and analyse these results. The `emis_summary()` function help summarize emission estimates by either `veh_type`, `pollutant`, or `time`. Using this function, users can easily:
+
+**Calculate total emissions for each vehicle**
+
+```{r,fig.height=5,fig.width=6}
+emi_total <- lapply(emi_data,function(i){
+  emis_summary(emi_list = i,
+               emi_var = "emi",
+               by = "veh_type",
+               veh_var = "veh_type",
+               pol_var = "pollutant") 
+})
+emi_total <- data.table::rbindlist(emi_total)
+head(emi_total)
+
+# plot
+ggplot(data=emi_total) +
+  geom_col(aes(x=veh_type, y= as.numeric(emi/1000), fill=pollutant), color=NA, show.legend = FALSE) +
+  labs(y="Total emissions (Kg)", x="Hour of the day") +
+  facet_wrap(~pollutant, scales = "free", nrow = 2) +
+  theme_minimal()
+```
+
+**Calculate total emissions by each pollutant:**
+
+```{r, message = FALSE}
+emi_by_pol <- lapply(emi_data,function(i){
+  emis_summary(emi_list = i,
+               emi_var = "emi", 
+               by = "pollutant", 
+               veh_var = "veh_type", 
+               pol_var = "pollutant") 
+})
+emi_by_pol <- data.table::rbindlist(emi_by_pol)
+head(emi_by_pol)
+```
+
+If available in `names(emi_list)`, it is possible to add extra argument about fleet.
+
+```{r, message = FALSE}
+emi_by_veh <- lapply(emi_data,function(i){
+  emis_summary(emi_list = i,
+               emi_var = "emi", 
+               by = "veh_type", 
+               veh_var = c("veh_type", "euro", "fuel"),
+               pol_var = "pollutant") 
+})
+emi_by_veh <- data.table::rbindlist(emi_by_veh)
+head(emi_by_veh)
+
+```
+
+**Calculate total emissions emitted by hour of the day and pollutant:**
+
+```{r,fig.height=5,fig.width=8}
+emi_by_time <- lapply(emi_data,function(i){
+  tmp_emi <- emis_summary(emi_list = i,
+                          emi_var = "emi",
+                          by = "time",
+                          time_column = "time_column",
+                          veh_var = "veh_type",
+                          pol_var = "pollutant") 
+})
+emi_by_time <- data.table::rbindlist(emi_by_time)
+head(emi_by_time) 
+
+```
+
+Alternatively, the user can use the `emis_to_dt()` function to convert the output of `emission_model()` from a `list` to a `data.table` format:
+
+```{r,eval = TRUE,fig.width=7,fig.height=4}
+emi_dt <- lapply(emi_data,function(i){
+  emis_to_dt(emi_list = i
+             ,emi_vars = "emi"
+             ,veh_vars = c("veh_type", "euro", "fuel")
+             ,pol_vars = "pollutant"
+             ,segment_vars = "time_column")
+})
+emi_dt <- data.table::rbindlist(emi_dt)
+emi_dt[, time_column := data.table::hour(data.table::as.ITime(time_column))]
+emi_dt_sum <- emi_dt[,sum(emi),by =.(pollutant,veh_type,time_column)]
+
+# plot
+ggplot(data=emi_dt_sum) +
+  geom_col(aes(y= as.numeric(V1/1000),x=factor(time_column)
+               ,  fill=veh_type),position = "dodge2")+
+  labs(y="Total emissions (Kg)", x="Hour of the day"
+       ,fill = "Vehicle type") +
+  scale_fill_brewer()+
+  facet_wrap(~pollutant, scales = "free", nrow = 2) + 
+  theme_minimal()
+
+```
+
 **5. Emission into grid**
 
-We now show the example for `CO2` emissions.
+We now show the example for CO2 emissions.
 
 ```{r, message=FALSE}
 # Create Grid
@@ -196,29 +312,32 @@ grid_gps <- sf::st_make_grid(
   , square = FALSE)
 grid_gps <- sf::st_sf(id = 1:length(grid_gps),geometry = grid_gps)
 
-tmp_emis_dt <- lapply(1:length(emi_data),function(i){ # i = 3
-  tmp_emi_dt <- emis_to_dt(emi_list = emi_data[[i]]
-                          ,emi_vars = "emi"
-                          ,veh_vars = "veh_type"
-                          ,pol_vars = "pollutant")
-  tmp_gps <- cbind(linestring_for[shape_id == unique(gps_for$shape_id)[i]]
+emis_dt <- lapply(emi_data,function(i){ # i = 3
+  tmp_emi_dt <- emis_to_dt(emi_list = i
+                           ,emi_vars = "emi"
+                           ,veh_vars = "veh_type"
+                           ,pol_vars = "pollutant")
+  i$tp_model_co2 <- cbind(i$tp_model
                    ,tmp_emi_dt[pollutant == "CO2"])
-  tmp_gps <- sf::st_as_sf(tmp_gps)
-  tmp_emi_grid <- emis_grid(data = tmp_gps
+  tmp_emi_grid <- emis_grid(data = sf::st_as_sf(i$tp_model_co2)
                             ,emi = "emi"
                             ,grid = grid_gps)
   return(tmp_emi_grid)
-}) %>% data.table::rbindlist()
+})
+emis_dt <- data.table::rbindlist(emis_dt)
 ```
 
 Summing all emissions and plotting:
 
-```{r, eval = TRUE, fig.width=4,fig.height=4}
-tmp_emis_dt <- tmp_emis_dt[,total_emi := sum(emi), by = id][, .SD[1], by = id]
-tmp_emis_dt2 <- sf::st_as_sf(tmp_emis_dt)
+```{r, eval = TRUE, fig.width=5,fig.height=5}
+emis_dt_plot <- data.table::copy(emis_dt)
+emis_dt_plot[,("total_emi"):= sum(emi), by = id]
+emis_dt_plot <- emis_dt_plot[,.SD[1], by = id]
+emis_dt_plot <- sf::st_as_sf(emis_dt_plot)
 
 ggplot() +
-  geom_sf(data=tmp_emis_dt2, aes(fill= as.numeric(total_emi)), color=NA) +
+  geom_sf(data=emis_dt_plot, aes(fill= as.numeric(total_emi))
+          , color=NA) +
   scale_fill_continuous(type = "viridis")+
   labs(fill = "CO2 (g)")+
   theme_void()
